--- a/css/style.css
+++ b/css/style.css
@@ -257,4 +257,28 @@ body {
   -webkit-transition-timing-function: ease;
           transition-timing-function: ease;
 }
+
+#mobile {
+  display: none;
+}
+
+@media (max-width: 500px) {
+  #mobile {
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 10;
+    width: 100vw;
+    height: 100vh;
+    background-color: #E5342A;
+    color: white;
+    text-align: center;
+  }
+}
+
+@media (max-width: 500px) {
+  .mainArea {
+    display: none;
+  }
+}
 /*# sourceMappingURL=style.css.map */
