--- a/css/style.scss
+++ b/css/style.scss
@@ -178,3 +178,27 @@ body {
         transition-timing-function: ease;
     }
 }
+
+//tempoprary
+
+#mobile {
+    display: none;
+
+    @include maxw(500px) {
+        display: block;
+        position: absolute;
+        left: 0;
+        top: 10;
+        width: 100vw;
+        height: 100vh;
+        background-color: $primary-color;
+        color: white;
+        text-align: center;
+    }
+}
+
+@include maxw(500px) {
+    .mainArea {
+        display: none;
+    }
+}
