--- a/css/_mixins.scss
+++ b/css/_mixins.scss
@@ -15,5 +15,5 @@
     border-radius: 11rem;
     font-size: 1.25rem;
     font-weight: bold;
-    padding: 0.41em 1.7em;
+    padding: 1.1% 4.5%;
 }
